Fix alignement of ECR notice

--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -22,7 +22,7 @@
 }
 
 .hero {
-  margin: 30vh auto 50px 15vw;
+  margin: 30vh auto 150px 15vw;
   width: 34rem;
   display: flex;
   flex-direction: column;
@@ -49,7 +49,7 @@
   .hero {
     width: 100%;
     text-align: center;
-    margin: 150px auto 50px 0;
+    margin: 120px auto 0px 0;
     padding: 50px;
     align-items: center;
   }
@@ -83,8 +83,6 @@
 }
 
 .notice {
-  position: fixed;
-  bottom: 10vh;
   width: 70vw;
   text-align: center;
   background: rgba(87, 103, 155, 0.439);
